# evelynn-discord-bot

./: .env.example  .gitignore  pyproject.toml
database/schema/: schema.prisma  schema.sql
src/: env.py  main.py
src/cogs/guild_setup/: cog.py
src/cogs/rule34/: api.py  cog.py  tag_group.py  utils.py
src/db/: database.py  engine.py  models.py  utils.py
src/hooks/: register.py
src/utils/: formatter.py  general.py
